@@ -13,15 +13,15 @@ import static org.junit.Assert.*;
  *
  * @author Petr Miko
  */
-public class ActionAnalyseSelectedTest {
+public class ActionVisualizeSelectedTest {
 
     private static Method printExtensionsMethod;
     private static Method isAnalysibleMethod;
     private static EDEDBPerspective perspective;
     private static EDEDClient session;
     private static EDEDBController controller;
-    private static ActionAnalyseSelected actionClass;
-    
+    private static ActionVisualizeSelected actionClass;
+
     /**
      * Test class initialization.
      * @throws NoSuchMethodException 
@@ -31,19 +31,19 @@ public class ActionAnalyseSelectedTest {
         perspective = new EDEDBPerspective();
         session = new EDEDClient();
         controller = new EDEDBController(perspective, session);
-        
-        actionClass = new ActionAnalyseSelected(controller);
-        
-        printExtensionsMethod = ActionAnalyseSelected.class.getDeclaredMethod("printExtensions");
+
+        actionClass = new ActionVisualizeSelected(controller);
+
+        printExtensionsMethod = ActionVisualizeSelected.class.getDeclaredMethod("printExtensions");
         printExtensionsMethod.setAccessible(true);
-        
-        isAnalysibleMethod = ActionAnalyseSelected.class.getDeclaredMethod("isAnalysable",String.class);
+
+        isAnalysibleMethod = ActionVisualizeSelected.class.getDeclaredMethod("isAnalysable", String.class);
         isAnalysibleMethod.setAccessible(true);
-        
-        System.out.print("* EDEDB - ActionAnalyseSelected test");
-        
+
+        System.out.print("* EDEDB - ActionVisualizeSelected test");
+
     }
-    
+
     /**
      * Testing private method printExtensions.
      * 
@@ -52,14 +52,14 @@ public class ActionAnalyseSelectedTest {
      * @throws InvocationTargetException 
      */
     @Test
-    public void printExtensions() throws IllegalAccessException, IllegalArgumentException, InvocationTargetException{
+    public void printExtensions() throws IllegalAccessException, IllegalArgumentException, InvocationTargetException {
         System.out.print("- extensions test");
         String extOutput = (String) printExtensionsMethod.invoke(actionClass);
-        System.out.println("("+ extOutput+")");
+        System.out.println("(" + extOutput + ")");
         String[] extensions = extOutput.split(", ");
-        assertTrue (extensions.length > 0);
+        assertTrue(extensions.length > 0);
     }
-    
+
     /**
      * Testing private method of analysability of extension.
      * @throws IllegalAccessException
@@ -67,10 +67,9 @@ public class ActionAnalyseSelectedTest {
      * @throws InvocationTargetException 
      */
     @Test
-    public void isAnalysable() throws IllegalAccessException, IllegalArgumentException, InvocationTargetException{
+    public void isAnalysable() throws IllegalAccessException, IllegalArgumentException, InvocationTargetException {
         System.out.println("- analysibility test");
-        assertFalse((Boolean) isAnalysibleMethod.invoke(actionClass,"nonsense"));
+        assertFalse((Boolean) isAnalysibleMethod.invoke(actionClass, "nonsense"));
         assertTrue((Boolean) isAnalysibleMethod.invoke(actionClass, "vhdr"));
     }
-
 }
